--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,23 +11,45 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 400px;
+  max-width: 800px;
   margin: 0 auto;
   padding-top: 20px;
   padding-bottom: 20px;
-  border: 2px solid black;
+
+  &__area {
+    display: flex;
+    overflow-y: auto;
+    align-items: flex-start;
+    justify-content: flex-start;
+    max-height: 250px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    flex-wrap: wrap;
+    margin-top: 10px;
+  }
 
   .generator__form {
     display: flex;
     justify-content: space-around;
-  }
-
-  .generator__area {
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    width: 60%;
-    margin-top: 10px;
+
+    &_chbox {
+      margin-left: 10px;
+      margin-right: 5px;
+      cursor: pointer;
+    }
+
+    &_text {
+      border: 1px solid black;
+      margin-right: 10px;
+    }
+
+    &_btn {
+      cursor: pointer;
+      border: 1px solid black;
+    }
   }
 }
 
@@ -42,14 +64,74 @@ header {
   border: 1px solid black;
   border-radius: 20px;
 
-  .tag__name {
+  &__name {
     max-width: 80px;
     margin-right: 5px;
     word-wrap: break-word;
     text-align: center;
   }
 
-  .tag__icon {
+  &__icon {
     cursor: pointer;
+
+    &:hover {
+      color: blue;
+    }
+  }
+
+  &:not(:first-child) {
+    margin-left: 5px;
+  }
+}
+
+@media (max-width: 500px) {
+  header {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 2.5em;
+    text-align: center;
+  }
+  .generator__area {
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+    overflow-y: none;
+    overflow: visible;
+  }
+
+  .generator__form {
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+
+    &_chbox {
+      transform: scale(2);
+      margin: 0px;
+    }
+
+    &_text {
+      font-size: 1.8em;
+    }
+
+    & *:not(:first-child) {
+      margin-top: 20px;
+      font-size: 1.8em;
+    }
+  }
+
+  .tag {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 15px;
+    padding-right: 10px;
+    border: 1px solid black;
+    border-radius: 20px;
+    font-size: 2em;
+
+    &__name {
+      max-width: 150px;
+    }
   }
 }
